@@ -1,3 +1,8 @@
+2017-08-23  George G. Vega Yon <g.vegayon@gmail.com>:
+	* R/dspl.r: Fixing bug on moreinfo.
+	* .travis.yml: Adding more tests.
+
+
 2017-06-27  George G. Vega Yon <g.vegayon@gmail.com>:
 	* :Restart of the project.
 	* R/dspl.R: Fixed bug and tested dspl in google... works.
